# ecommerce-order-pipeline

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: quality_report.csv
data/bronze/: bronze.duckdb
data/gold/: gold.duckdb  gold_customer_segments.csv  gold_return_rate_by_category.csv  gold_revenue_by_region.csv  gold_top_products.csv
data/raw/: customers.csv  order_items.csv  orders.csv  products.csv  returns.csv
data/silver/: customers.csv  order_items.csv  orders.csv  products.csv  returns.csv  silver.duckdb
notebooks/: business_insights.ipynb  generate_charts.py
pipeline/: bronze.py  data_quality.py  generate_data.py  gold.py  run_all.py  silver.py
tests/: conftest.py  test_bronze.py  test_gold.py  test_quality.py  test_silver.py
